# Moradin-Forms

./: BUILDING.md  CMakeLists.txt  CMakeLists_8txt.html  CMakePresets.json  Core_2CMakeLists_8txt.html  HACKING.md  README.md  README_8md.html  Utility_2main_8cpp.html  about.html  about_8dox.html  annotated.html  conanfile.txt  dir_1f10682fec53f0772108851bfcef2e4d.html  dir_2d28ba3a378a97d085301b74b64c3677.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  lib_8cpp.html  lib_8hpp.html  main_8cpp.html  modules.html  namespaceimpl.html  namespaces.html  pages.html  searchdata-v1.js  structAttribute.html  structElement.html  structattribute.html  structelement.html  structlibrary.html
.github/: clang-12.profile
.github/workflows/: ci.yml  flawfinder.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: CMakeLists.txt  lib.cpp  main.cpp
source/Core/: CMakeLists.txt
source/Utility/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/source/: Moradin-Forms_test.cpp
